# MxImage

./: README.md
app/: build.gradle
app/src/androidTest/java/com/miaxis/image/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/miaxis/image/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/miaxis/image/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
imagelib/: CMakeLists.txt  build.gradle
imagelib/release/: MXImageLib.aar
imagelib/src/androidTest/java/com/miaxis/image/: ExampleInstrumentedTest.java
imagelib/src/main/: AndroidManifest.xml
imagelib/src/main/cpp/: native-lib.cpp
imagelib/src/main/java/com/miaxis/image/: MxFileImage.java  MxImage.java  MxImageDrawer.java  MxImageFactory.java  MxImages.java  MxIntentImage.java
imagelib/src/main/java/org/zz/jni/: mxImageTool.java
imagelib/src/test/java/com/miaxis/image/: ExampleUnitTest.java
